--- a/index.html
+++ b/index.html
@@ -1,50 +1,17 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Geomax</title>
+    <meta name="author" content="Sławomir Aleksak WSEI 2021">
+    <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
-    <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-        }
+    <link href="css/default.css" rel="stylesheet" type="text/css">
 
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        /*.row.content {height: 450px}*/
-        .row.content {height: 100%}
-
-
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: #f1f1f1;
-            height: 100%;
-        }
-
-        /* Set black background color, white text and some padding */
-        footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-        }
-
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-            .row.content {height:auto;}
-        }
-    </style>
 </head>
 <body>
 
@@ -56,8 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" ><img src="/img/logo.png"></a>
-<!--            <a href="#" class="navbar-brand"><img src="/img/logo.png"></a>-->
+            <a class="navbar-brand " href="#"><img src="./img/logo.png"  alt="logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -78,37 +44,38 @@
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tachimetry</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Drony</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Skanery</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">GPS </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Niwelatory</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dedykowane oprogramowanie</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="#!">Galeria</a>
             </div>
         </div>
-<!--        <div class="col-sm-2 sidenav">
-            <p><a href="#">Link</a></p>
-            <p><a href="#">Link</a></p>
-            <p><a href="#">Link</a></p>
-        </div>-->
-        <div class="col-sm-10 text-left">
-            <h1>Welcome</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <hr>
+
+        <div class="col-sm-5 text-left">
+            <h1>Witamy</h1>
+
+            <h4 class ="text-justify">Działamy w obszarze usług geodezyjno - informatycznych. Posiadamy szerokie doświadczenie w zakresie wykorzystania i wdrażania technologii informatycznych dla geoedezji.
+                Realizujemy również pełen zakres prac godezynych w zakresach 1, 2, 4. Oferujemy wsparcie na każdym etapie świadczenia usługi oraz zaprojektowania, zbudowania i użytkowania systemów informatycznych w geodezyjnych. Ściśle współpracujemy z klientami,
+                partnerami i dostawcami, aby regularnie monitorować ich postrzeganie na temat jakości realizowanych przez nas usług. Podstawą naszych sukcesów
+                jest zaangażowanie pracowników, którzy wykorzystując innowacyjne metody, zapewniają jakość podejmowanych przez nas działań.</h4>
+<!--            <hr>
             <h3>Test</h3>
-            <p>Lorem ipsum...</p>
+            <p>Przykładowy tekst...</p>-->
+
+
+
+
         </div>
-<!--        <div class="col-sm-2 sidenav">
-            <div class="well">
-                <p>ADS</p>
-            </div>
-            <div class="well">
-                <p>ADS</p>
-            </div>
-        </div>-->
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="img/home-main-article-a-2.jpg" alt="Główny obraz">
+            </a>
+        </div>
+
     </div>
 </div>
 
 <footer class="container-fluid text-center">
-    <p>Footer Text</p>
+    <p>Wszelkie prawa zastrzeżone © 2021 Geomax sp. z o. o.</p>
 </footer>
 
 </body>
