dodano galerie i formularz kontaktowy

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"><img src="./img/logo.png"  alt="logo"></a>
+            <a class="navbar-brand " href="index.html"><img src="./img/logo.png"  alt="logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">O firmie</a></li>
-                <li><a href="#">Projekty</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="sub_pages/about.html">O firmie</a></li>
+                <li><a href="sub_pages/projekcts.html">Projekty</a></li>
+                <li><a href="sub_pages/contact.html">Kontakt</a></li>
             </ul>
         </div>
     </div>
@@ -42,11 +42,11 @@
         <div class="border-end bg-white col-sm-2 sidenav" id="sidebar-wrapper">
             <div class="h4 border-bottom bg-light lead">Nasz sprzęt</div>
             <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tachimetry</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Drony</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">GPS </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dedykowane oprogramowanie</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="#!">Galeria</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sub_pages/tach.html">Tachimetry</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sub_pages/drone.html">Drony</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sub_pages/gps.html">GPS </a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="sub_pages/soft.html">Dedykowane oprogramowanie</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="sub_pages/gallery.html">Galeria</a>
             </div>
         </div>
 
