drobne poprawki cz1

--- a/sub_pages/gallery.html
+++ b/sub_pages/gallery.html
@@ -40,11 +40,11 @@
         <div class="border-end bg-white col-sm-2 sidenav" id="sidebar-wrapper">
             <div class="h4 border-bottom bg-light lead">Nasz sprzęt</div>
             <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Tachimetry</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Drony</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">GPS </a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dedykowane oprogramowanie</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="../gallery">Galeria</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="tach.html">Tachimetry</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="drone.html">Drony</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="gps.html">GPS </a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="soft.html">Dedykowane oprogramowanie</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="gallery.html">Galeria</a>
             </div>
         </div>
         <div class="col-sm-10 text-left">
@@ -63,7 +63,6 @@
             <a href="../gallery/13.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/13_t.jpg"/></a>
             <a href="../gallery/14.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/14_t.jpg"/></a>
             <a href="../gallery/15.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/15_t.jpg"/></a>
-            <a href="gallery/16.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="gallery_thumbnails/16_t.jpg"/></a>
             <a href="../gallery/17.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/17_t.jpg"/></a>
             <a href="../gallery/18.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/18_t.jpg"/></a>
             <a href="../gallery/19.jpg" data-lightbox="image-1" data-title="Pomiary w terenie"><img src="../gallery_thumbnails/19_t.jpg"/></a>
