dodane kolejne podstrony

--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
         <div class="col-sm-5 text-left">
             <h1>Witamy</h1>
 
-            <h4 class ="text-justify">Działamy w obszarze usług geodezyjno - informatycznych. Posiadamy szerokie doświadczenie w zakresie wykorzystania i wdrażania technologii informatycznych dla geoedezji.
-                Realizujemy również pełen zakres prac godezynych w zakresach 1, 2, 4. Oferujemy wsparcie na każdym etapie świadczenia usługi oraz zaprojektowania, zbudowania i użytkowania systemów informatycznych w geodezyjnych. Ściśle współpracujemy z klientami,
-                partnerami i dostawcami, aby regularnie monitorować ich postrzeganie na temat jakości realizowanych przez nas usług. Podstawą naszych sukcesów
-                jest zaangażowanie pracowników, którzy wykorzystując innowacyjne metody, zapewniają jakość podejmowanych przez nas działań.</h4>
+            <p>Działamy w obszarze usług geodezyjno - informatycznych. Posiadamy szerokie doświadczenie w zakresie wykorzystania i wdrażania technologii informatycznych dla geoedezji.
+                Realizujemy również pełen zakres prac godezynych w zakresach 1, 2, 4. Oprogramowanie dedykowane to oprogramowanie na zamówienie – stworzone na miarę, odpowiadające
+            specyficznym wymaganiom Klienta. Rozwiązania dedykowane umożliwiają budowanie przewagi biznesowej nad konkurencją. Są znacznie lepiej dostosowane do potrzeb organizacji
+            niż tzw. oprogramowania pudełkowe. Programy na zamówienie pozwalają na integrację z pozostałymi systemami wykorzystywanymi w firmie. Dedykowane oprogramowanie dla biznesu
+            to również opcja rozbudowy w przyszłości, w przypadku powstania nowych oczekiwań.<br>
+            Prowadzimy projekty w oparciu o metodyki zwinne, dzięki czemu zleceniodawca przez cały czas może śledzić postęp. Zastosowanie metodyki SCRUM pozwala (na każdym etapie) na
+            elastyczne dostosowywanie oprogramowania do dodatkowych potrzeb Klienta. Zapewniamy wdrożenie oprogramowania dla biznesu oraz jego wsparcie i utrzymanie. Jesteśmy w stanie
+                również dostarczyć i zainstalować sprzęt niezbędny do prawidłowego funkcjonowania tworzonego rozwiązania.</p>
 <!--            <hr>
             <h3>Test</h3>
             <p>Przykładowy tekst...</p>-->
