--- a/sub_pages/drone.html
+++ b/sub_pages/drone.html
@@ -51,6 +51,21 @@
         </div>
 
         <div class="col-sm-5 text-left">
+            <br>
+            <p><strong> Dron DJI Phantom 4 RTK</strong></p>
+            Phantom 4 RTK to urządzenie firmy DJI z serii Enterprise. Dedykowany jest on dla geodetów, inżynierów, dekarzy czy inspektorów
+            budownictwa, którzy potrzebują codziennej pomocy w określaniu danych budynków i inwestycji. Moduł RTK sprawia, że dane pozycjonujące
+            z centymetrową dokładnością są lepiej przygotowane do użycia przez specjalistów, z kolei nowoczesne technologie mapowania poprawiają
+            metadane obrazu. Dodatkowy moduł GNSS gwarantuje większą stabilizację lotu w zaludnionych miastach o słabszej jakości sygnału. Obydwa
+            moduły odpowiadają także za gromadzenie precyzyjnych danych inspekcyjnych i geodezyjnych oraz optymalizację bezpieczeństwa.
+            Dron Phantom 4 RTK wyposażony jest w system OcuSync, umożliwiający transmisję obrazu w odległości nawet 5 km od aparatury – dzięki temu
+            możesz używać go również na dłuższych odległościach
+        </div>
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="../img/phantom_rtk.jpg" alt="Phantom 4 RTK">
+            </a>
+        </div>
 
         </div>
     </div>
