--- a/sub_pages/soft.html
+++ b/sub_pages/soft.html
@@ -51,13 +51,28 @@
         </div>
 
         <div class="col-sm-5 text-left">
-
+            <br>
+            <p><strong> Dedykowane oprogramowanie</strong></p>
+            Tworzymy oprogramowanie dedykowane wspierające optymalizację procesów biznesowych, jak również oprogramowanie na zamówienie
+            wspomagające działania produkcyjne i poprodukcyjne. Oferujemy także programy integrujące ekosystem IoT, włączające rozwiązania
+            IT do działalności firmy. Tworzymy również oprogramowanie do pracy zdalnej, dobierając optymalne narzędzia i procedury do specyfiki danej branży.
+            Wykonujemy analizę biznesowo-techniczną oraz definiujemy wymagania Klienta, co pozwala na optymalizację oprogramowania, jak również jego
+            integrację z wykorzystywanymi już w firmie systemami IT. W ten sposób powstaje oprogramowanie dedykowane bazujące na najnowszych technologiach,
+            zbudowane na podstawie najwyższych standardów.<br>
+            Wykorzystujemy najnowsze technologie, tworząc zarówno oprogramowanie serwerowe, jak i aplikacje internetowe oraz mobilne. Realizujemy projekty w
+            oparciu o mikrousługi spakowane w kontenerach na platformie Docker. Uzyskujemy skalowalność aplikacji, korzystając z rozwiązań Kubernetes, instalowanych
+            zarówno na infrastrukturze Klienta, jak i na wysokowydajnych oraz wysokodostępnych rozwiązaniach chmurowych AWS, Azure czy Google Cloud.
+        </div>
+        <div class="col-md-4 back-to-blog">
+            <br>
+            <a href="/">
+                <img class="img-thumbnail" src="../img/coder.jpg" alt="Programming">
+            </a>
         </div>
     </div>
-
     <footer class="container-fluid text-center">
         <p>Wszelkie prawa zastrzeżone © 2021 Geomax sp. z o. o.</p>
     </footer>
-
+</div>
 </body>
 </html>
