--- a/sub_pages/tach.html
+++ b/sub_pages/tach.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Geomax</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
@@ -49,15 +49,33 @@
                 <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="gallery.html">Galeria</a>
             </div>
         </div>
-
         <div class="col-sm-5 text-left">
-
+            <br>
+            <p><strong> Leica Nova MS50</strong></p>
+            Tachimetr Leica Nova MS50 łączy funkcje skanowania 3D z tradycyjnymi pomiarami geodezyjnymi. Główną zaletą jest dokładne skanowanie szczegółów.
+            Jest to urządzenie geodezyjne pozwalające sprawdzić spójność i kompletność danych. Funkcje Tachimetru MS50  pozwalają  gromadzić dane i wizualizować
+            pomiary topograficzne z wykorzystaniem chmur punktów. Leica Nova MS50 został wyposażony w kamerę przeglądową i kamerę wbudowaną w lunetę z 30x powiększeniem i autofokusem.
+            <p><br><strong>Główne zalety Leica Nova MS50:</strong></p>
+            <ul>
+                <li>najwyższa precyzja</li>
+                <li>wydajność</li>
+                <li>pełna automatyzacja procedur pomiarowych</li>
+                <li>elastyczność w&nbsp;podejściu do&nbsp;realizowanych pomiarów</li>
+                <li>płynna strumieniowa transmisja obrazu video</li>
+                <li>najwyższa jakość obrazu</li>
+            </ul>
         </div>
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="../img/leica_nova_ms50.jpg" alt="Tachimetr leica">
+            </a>
+        </div>
+    </div>
+
     </div>
 
     <footer class="container-fluid text-center">
         <p>Wszelkie prawa zastrzeżone © 2021 Geomax sp. z o. o.</p>
     </footer>
-
 </body>
 </html>
