--- a/sub_pages/about.html
+++ b/sub_pages/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - o nas</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
@@ -51,6 +51,22 @@
         </div>
 
         <div class="col-sm-5 text-left">
+            <br>
+            <p><strong>Geomax</strong></p>
+            Geomax to niewielka firma z całkowicie polskim kapitałem, działająca w sektorze Geodezji/IT.
+            Tworzymy zaawansowane rozwiązania IT/GIS dla organizacji z wielu branż.
+            Nasze specjalizacje to prace geodezyjne, tworzenie oprogramowania na zamówienie, doradztwo informatyczne, optymalizacja procesów biznesowych,
+            a także usługi związane z BSP (Bezzałogowe Statki Powietrzne).
+            Stałe doskonalenie personelu i produktów przyczyniają się do powstania zaawansowanych technologicznie usług dla jednostek z sektora prywatnego i publicznego.
+            Posiadamy bogate doświadczenie zdobyte podczas realizacji wielu zadań o różnorodnym asortymencie, stopniu złożoności  i zaawansowaniu technologicznym.
+            Podejmując współpracę z Geomax, zapewniasz swojej firmie zaangażowanie doświadczonego i unikatowego zespołu profesjonalistów i pasjonatów.
+            Jesteśmy zaprogramowani na satysfakcję naszych Klientów.
+        </div>
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="../img/about.jpg" alt="avatar">
+            </a>
+        </div>
 
         </div>
     </div>
