--- a/sub_pages/drone.html
+++ b/sub_pages/drone.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - drony</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
