--- a/sub_pages/gps.html
+++ b/sub_pages/gps.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - GPS</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
@@ -51,6 +51,30 @@
         </div>
 
         <div class="col-sm-5 text-left">
+            <br>
+            <p><strong>Leica GS18 I</strong></p>
+            GS18 I to dokładny i łatwy w obsłudze odbiornik ruchomy GNSS RTK. Wykorzystuje on niezwykle innowacyjną
+            technologię wizualnego wyznaczania położenia opartą na ścisłej integracji odbiornika GNSS, jednostki IMU
+            i aparatu. Urządzenie pozwala mierzyć punkty z geodezyjną dokładnością na podstawie zdjęć — w terenie
+            lub w biurze. Pozwala ono także tworzyć chmury punktów z zarejestrowanych zdjęć przy użyciu oprogramowania
+            Leica Infinity  i w ten sposób jeszcze bardziej rozszerzać możliwości zastosowań.
+
+            <p><br><strong>Główne zalety Leica GS18 I:</strong></p>
+            <ul>
+                <li>precyzyjność</li>
+                <li>szybkość i przyspieszenie pracy</li>
+                <li>wydajność</li>
+                <li>zawsze wiarygodne wyniki</li>
+                <li>elastyczność w podejściu do realizowanych pomiarów</li>
+                <li>wbudowana funkcja „Web Server” umożliwiająca skonfigurowanie surowych danych RTK oraz funkcja rozpoczęcia pomiaru w terenie po naciśnięciu jednego przycisku</li>
+                <li>wygoda w wykonywaniu każdej roboty geodezyjnej</li>
+            </ul>
+        </div>
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="../img/leica-gs18-t-as-built-v2.jpg" alt="GPS leica">
+            </a>
+        </div>
 
         </div>
     </div>
@@ -58,6 +82,5 @@
     <footer class="container-fluid text-center">
         <p>Wszelkie prawa zastrzeżone © 2021 Geomax sp. z o. o.</p>
     </footer>
-
 </body>
 </html>
