--- a/sub_pages/projekcts.html
+++ b/sub_pages/projekcts.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - projekty</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
@@ -51,11 +51,29 @@
         </div>
 
         <div class="col-sm-5 text-left">
-
+            <br>
+            <p><strong>Nasze Projekty</strong></p>
+            <ul>
+                <li>Opracowanie w technologii GIS baz danych systemu identyfikacji działek rolnych (LPIS) –  w ramach Krajowego Systemu Ewidencji Gospodarstw Rolnych i Zwierząt Gospodarskich (IACS)</li>
+                <li>Opracowanie na potrzeby nowoczesnych Systemów Informacji o Terenie dla Zarządu Geografii Wojskowej Sztabu Generalnego Wojska Polskiego map wektorowych poziomu 2 (Vmap Level 2)</li>
+                <li>Obsługa geodezyjna pomiarów hałd - Lubelski Węgiel „BOGDANKA” Spółka Akcyjna</li>
+                <li>Tworzenie usług sieciowych i wykonywanie analiz rastrowych w programie QGIS z wykorzystaniem biblioteki GRASS na potrzeby Agencji Restrukturyzacji i Modernizacji Rolnictwa.</li>
+                <li>Instalacja i konfiguracja serwera usług sieciowych do udostępniania map (WMS, WFS, WCS, WMTS, itp.). Usługa udostępniania aktualnego i corocznie aktualizowanego ortofotoplanu dla gmin w formie usługi sieciowej, przez co dostęp do produktu jest możliwy w różnorodnym oprogramowaniu i przy wielu użytkownikach jednocześnie.</li>
+                <li>Skanowanie i import do bazy GIS dokumentacji archiwów Powiatowych Ośrodków Dokumentacji Geodezyjnej i Kartograficznej- Um Bydgoszcz</li>
+                <li>Obsługa geodezyjna budowy Aqua Lublin</li>
+            </ul>
         </div>
+        <div class="col-md-4 back-to-blog">
+            <a href="/">
+                <img class="img-thumbnail" src="../img/about.jpg" alt="avatar">
+            </a>
+        </div>
+
     </div>
 
-    <footer class="container-fluid text-center">
+        </div>
+
+<footer class="container-fluid text-center">
         <p>Wszelkie prawa zastrzeżone © 2021 Geomax sp. z o. o.</p>
     </footer>
 
