--- a/sub_pages/soft.html
+++ b/sub_pages/soft.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - oprogramowanie</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
@@ -37,7 +37,6 @@
 </nav>
 
 <div class="container-fluid text-center">
-
     <div class="row content">
         <div class="border-end bg-white col-sm-2 sidenav" id="sidebar-wrapper">
             <div class="h4 border-bottom bg-light lead">Nasz sprzęt</div>
@@ -49,7 +48,6 @@
                 <a class="list-group-item list-group-item-action list-group-item-light p-3 " href="gallery.html">Galeria</a>
             </div>
         </div>
-
         <div class="col-sm-5 text-left">
             <br>
             <p><strong> Dedykowane oprogramowanie</strong></p>
