--- a/sub_pages/tach.html
+++ b/sub_pages/tach.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Geomax</title>
+    <title>Geomax - tachimetry</title>
     <meta name="author" content="Sławomir Aleksak WSEI 2021">
     <meta name="publisher" content="Sławomir Aleksak WSEI 2021">
     <meta charset="utf-8">
@@ -51,7 +51,7 @@
         </div>
         <div class="col-sm-5 text-left">
             <br>
-            <p><strong> Leica Nova MS50</strong></p>
+            <p><strong>Leica Nova MS50</strong></p>
             Tachimetr Leica Nova MS50 łączy funkcje skanowania 3D z tradycyjnymi pomiarami geodezyjnymi. Główną zaletą jest dokładne skanowanie szczegółów.
             Jest to urządzenie geodezyjne pozwalające sprawdzić spójność i kompletność danych. Funkcje Tachimetru MS50  pozwalają  gromadzić dane i wizualizować
             pomiary topograficzne z wykorzystaniem chmur punktów. Leica Nova MS50 został wyposażony w kamerę przeglądową i kamerę wbudowaną w lunetę z 30x powiększeniem i autofokusem.
